--- a/app/src/main/res/layout/game_bottons_layout.xml
+++ b/app/src/main/res/layout/game_bottons_layout.xml
@@ -1,19 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<GridView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_menu_grid"
-    android:numColumns="2"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main_menu_fragment_root"
     android:layout_height="match_parent"
-    android:layout_centerHorizontal="true"
-    android:layout_alignWithParentIfMissing="false"
-    android:verticalSpacing="20dp"
-    android:horizontalSpacing="20dp"
-    android:stretchMode="columnWidth"
-    android:gravity="center"
-    android:layout_centerInParent="true"
-    android:layout_centerVertical="true"
-    android:padding="10dp"
+    android:layout_width="match_parent"
+    android:animateLayoutChanges="true"
     >
 
-</GridView>
+    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/main_menu_grid"
+        android:numColumns="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignWithParentIfMissing="false"
+        android:verticalSpacing="20dp"
+        android:horizontalSpacing="20dp"
+        android:stretchMode="columnWidth"
+        android:padding="10dp" />
+    <LinearLayout
+        android:id="@+id/main_menu_toast"
+        android:visibility="gone"
+        android:layout_below="@id/main_menu_grid"
+        android:background="@color/colorPrimary"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/toast_text"
+            android:layout_marginLeft="10dp"
+            android:layout_gravity="center_vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:textColor="#ffffff"
+            android:layout_height="wrap_content"
+            android:textAlignment="textStart"
+            android:textSize="18dp"
+            />
+        <ImageView
+            android:id="@+id/toast_close_button"
+            android:layout_margin="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_close_white_24dp"
+            />
+    </LinearLayout>
+
+
+</RelativeLayout>
