--- a/app/src/main/res/layout/gallery_author_item.xml
+++ b/app/src/main/res/layout/gallery_author_item.xml
@@ -13,18 +13,9 @@
             android:id="@+id/gallery_author_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/colorPrimaryDark"
+            android:textSize="14sp"
+            android:textColor="@color/black"
             android:layout_weight="0.9"
-            />
-        <TextView
-            android:id="@+id/picture_count"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/darker_gray"
-            android:layout_weight="0"
-            android:padding="4dp"
-            android:text="23"
             />
     </LinearLayout>
     <LinearLayout
@@ -38,16 +29,6 @@
             android:layout_weight="0.9"
             android:textColor="@android:color/darker_gray"
             />
-        <TextView
-            android:id="@+id/pic_by_level_count"
-            android:layout_weight="0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@android:color/darker_gray"
-            android:padding="4dp"
-            android:text="1:12, 2:10, 3:43"
-            />
-
     </LinearLayout>
 
 
