--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,10 +22,10 @@
             <!--android:id="@+id/nav_settings"-->
             <!--android:icon="@drawable/ic_settings_applications_black_24dp"-->
             <!--android:title="@string/preference" />-->
-        <!--<item-->
-            <!--android:id="@+id/nav_gallery"-->
-            <!--android:icon="@drawable/ic_menu_gallery"-->
-            <!--android:title="@string/gallery" />-->
+        <item
+            android:id="@+id/nav_gallery"
+            android:icon="@drawable/ic_menu_gallery"
+            android:title="@string/gallery" />
         <item
             android:id="@+id/nav_about"
             android:icon="@drawable/ic_info_black_24dp"
