--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -46,7 +46,7 @@
 
     <TextView
         android:id="@+id/sidebar_bottom_text"
-        android:textColor="@color/gray_text_color"
+        android:textColor="@color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="12dp"
