--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="green_mark_body">#b1f9b8</color>
     <color name="gray_text_color">#a8000000</color>
     <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 
 </resources>
